Fixed classification model and added test for Image.

--- a/libbayes/test/CMakeLists.txt
+++ b/libbayes/test/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_executable(libbayes-tests
         main.cpp test-validate.cpp test-training.cpp test-classification.cpp test-image.cpp
-        test-validate.cpp ../src/validate-file.cpp)
+        test-validate.cpp ../src/validate-file.cpp test-image.cpp ../src/image.cpp)
 target_include_directories(libbayes-tests PRIVATE ./)
 
 target_link_libraries(libbayes-tests libbayes)
